--- a/FileStorage/FileStorageContext.csproj
+++ b/FileStorage/FileStorageContext.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="DbContext\**" />
+    <EmbeddedResource Remove="DbContext\**" />
+    <None Remove="DbContext\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.9">
       <PrivateAssets>all</PrivateAssets>
@@ -22,17 +28,7 @@
   </ItemGroup>
 
 	<ItemGroup>
-		<Content Include="DbContext\*.*">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-
-	<ItemGroup>
 	  <Compile Remove="FileStorage.cs" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="DbContext\" />
 	</ItemGroup>
 
 	
